Task #1 - Create initial definitions * fixed linking between files for both HTML and PDF output * updated plugin configuration to add more metadata, generate both HTML and PDF output, and separate the generated docs by version and type

--- a/src/main/asciidoc/glossary.adoc
+++ b/src/main/asciidoc/glossary.adoc
@@ -1,4 +1,4 @@
 [glossary]
 = Glossary
 
-BLOCK:: link:bibliography.html#rot[+[1]+] A length of track of defined limits, the use of which by trains and engines is governed by block signals, cab signals, or both.
+BLOCK:: link:bibliography{outfilesuffix}#rot[+[rot]+] A length of track of defined limits, the use of which by trains and engines is governed by block signals, cab signals, or both.
