--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -1,4 +1,4 @@
-= Railroad Train Order and Timetable Operations
+= Railroad Train Order and Time-table Operations
 
 link:glossary{outfilesuffix}[Glossary]
 
