--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -1,5 +1,5 @@
 = Railroad Train Order and Time-table Operations
 
-link:glossary{outfilesuffix}[Glossary]
+include::glossary.adoc[]
 
-link:bibliography{outfilesuffix}[Bibliography]
+include::bibliography.adoc[]
