--- a/src/main/asciidoc/glossary.adoc
+++ b/src/main/asciidoc/glossary.adoc
@@ -3,35 +3,35 @@
 
 BLOCK:: 
     A length of track of defined limits, the use of which by trains and engines is 
-    governed by block signals, cab signals, or both. <<rot>>
+    governed by block signals, cab signals, or both. <<bibliography.adoc#rot,1>>
 
 BLOCK SIGNAL::
     A fixed signal at the entrance of a block to govern trains and engines entering 
-    and using that block. <<rot>>
+    and using that block. <<bibliography.adoc#rot,1>>
 
 CURRENT OF TRAFFIC:: 
-    The movement of trains on a main track, in one direction, specified by the rules. <<rot>> <<oprb>>
+    The movement of trains on a main track, in one direction, specified by the rules. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 DIVISION::
     That portion of a railroad assigned to the supervision of a ______ (usually a 
-    superintendent). <<rot>>
+    superintendent). <<bibliography.adoc#rot,1>>
 {nbsp} +
 {nbsp} +
-    That portion of a railroad assigned to the supervision of a Superintendent. <<oprb>>
+    That portion of a railroad assigned to the supervision of a Superintendent. <<bibliography.adoc#oprb,2>>
 
 ENGINE::
     A unit propelled by any form of energy, or a combination of such units, operated 
-    from a single control, used in train or yard service. <<rot>>
+    from a single control, used in train or yard service. <<bibliography.adoc#rot,1>>
 {nbsp} +
 {nbsp} +
-    A machine propelled by any form of energy, and used in train or yard service. <<oprb>>
+    A machine propelled by any form of energy, and used in train or yard service. <<bibliography.adoc#oprb,2>>
 
 EXTRA TRAIN::
     A train not authorized by a time-table schedule.  It may be designated as -- 
 {nbsp} +
         Extra--for any extra train except passenger extra or work extra;  +
         Passenger extra--for passenger train extra;  +
-        Work extra--for work train extra. <<oprb>>
+        Work extra--for work train extra. <<bibliography.adoc#oprb,2>>
 
 FIXED SIGNAL::
     A signal of fixed location indicating a condition affecting the movement of a 
@@ -39,101 +39,101 @@ FIXED SIGNAL::
 {nbsp} +
     Note.--The definition of a "Fixed Signal" covers such signals as switch, train order, block, interlocking, semaphore, disc, 
     ball, stop boards, yard limit boards, speed limit signs, slow boards or other means for displaying indications that govern 
-    movement of a train or engine. <<oprb>>
+    movement of a train or engine. <<bibliography.adoc#oprb,2>>
 
 MAIN TRACK::
     A track extending through yards and between stations, upon which trains are 
-    operated by time-table, or train order, or both, or the use of which is governed by block signals. <<rot>>
+    operated by time-table, or train order, or both, or the use of which is governed by block signals. <<bibliography.adoc#rot,1>>
 {nbsp} +
 {nbsp} +
     A track extending through yards and between stations, upon which trains are 
-    operated by time-table or train order, or both, or the use of which is governed by block signals. <<oprb>>
+    operated by time-table or train order, or both, or the use of which is governed by block signals. <<bibliography.adoc#oprb,2>>
 
 MOTOR CAR::
-    A car propelled by any form of energy, and used in train or yard service. <<oprb>>
+    A car propelled by any form of energy, and used in train or yard service. <<bibliography.adoc#oprb,2>>
 
 PILOT::
     An employe assigned to a train when the engine-man or conductor, or both, are 
-    not fully acquainted with the physical characteristics or rules of the railroad, or portion of the railroad over which the train is to be moved. <<rot>>
+    not fully acquainted with the physical characteristics or rules of the railroad, or portion of the railroad over which the train is to be moved. <<bibliography.adoc#rot,1>>
 {nbsp} +
 {nbsp} +
     An employee assigned to a train when the engineman or conductor, or both, are
     not fully acquainted with the physical characteristics or rules of the railroad, or portion of the railroad, over which the
-    train is to be moved. <<oprb>>
+    train is to be moved. <<bibliography.adoc#oprb,2>>
 
 REGULAR TRAIN::
-    A train authorized by a time-table schedule. <<rot>> <<oprb>>
+    A train authorized by a time-table schedule. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 SCHEDULE::
-    That part of a time-table which prescribes class, direction, number and movement for a regular train. <<rot>> <<oprb>>
+    That part of a time-table which prescribes class, direction, number and movement for a regular train. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 SECTION::
     One of two or more trains running on the same schedule displaying signals, or for
-    which signals are displayed. <<rot>>
+    which signals are displayed. <<bibliography.adoc#rot,1>>
 {nbsp} +
 {nbsp} +
     One of two or more trains running on the same schedule, displaying signals or
-    for which signals are displayed. <<oprb>>
+    for which signals are displayed. <<bibliography.adoc#oprb,2>>
 
 SIDING::
-    A track auxiliary to the main track for meeting or passing trains. <<rot>> <<oprb>>
+    A track auxiliary to the main track for meeting or passing trains. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 SINGLE TRACK::
-    A main track upon which trains are operated in both directions. <<rot>> <<oprb>>
+    A main track upon which trains are operated in both directions. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 STATION::
-    A place designated on the time-table by name. <<rot>> <<oprb>>
+    A place designated on the time-table by name. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 SUB-DIVISION::
-    A portion of a division designated by time-table. <<oprb>>
+    A portion of a division designated by time-table. <<bibliography.adoc#oprb,2>>
 
 SUBDIVISION::
-    A portion of a division designated by time-table. <<rot>>
+    A portion of a division designated by time-table. <<bibliography.adoc#rot,1>>
 
 SUPERIOR TRAIN::
-    A train having precedence over another train. <<rot>> <<oprb>>
+    A train having precedence over another train. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 TIME-TABLE::
     The authority for the movement of regular trains subject to the rules.  It 
-    contains the classified schedules with special instructions relating to the movement of trains. <<rot>>
+    contains the classified schedules with special instructions relating to the movement of trains. <<bibliography.adoc#rot,1>>
 {nbsp} +
 {nbsp} +
     The authority for the movement of regular trains subject to the rules.  It 
-    contains classified schedules with special instructions relating to the movement of trains. <<oprb>>
+    contains classified schedules with special instructions relating to the movement of trains. <<bibliography.adoc#oprb,2>>
 
 TRAIN::
     An engine or more than one engine coupled, with or without cars, displaying
-    markers. <<rot>>
+    markers. <<bibliography.adoc#rot,1>>
 {nbsp} +
 {nbsp} +
     An engine, or motor car, or more than one engine, or motor car, coupled, with
-    or without cars, displaying markers. <<oprb>>
+    or without cars, displaying markers. <<bibliography.adoc#oprb,2>>
 
 TRAIN REGISTER::
     A book or form which may be used at designated stations for registering signals displayed, the time of arrival and departure of trains and such other information 
-    as may be prescribed. <<rot>> <<oprb>>
+    as may be prescribed. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 TRAIN OF SUPERIOR CLASS::
-    A train given precedence by time-table. <<rot>> <<oprb>>
+    A train given precedence by time-table. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 TRAIN OF SUPERIOR DIRECTION::
-    A train given precedence in the direction specified by time-table as between opposing trains of the same class. <<rot>> <<oprb>>
+    A train given precedence in the direction specified by time-table as between opposing trains of the same class. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 TRAIN OF SUPERIOR RIGHT::
-    A train given precedence by train order. <<rot>> <<oprb>>
+    A train given precedence by train order. <<bibliography.adoc#rot,1>> <<bibliography.adoc#oprb,2>>
 
 YARD::
     A system of tracks within defined limits provided for the making up of trains,
     storing of cars, and other purposes, over which movements not authorized by time-table, or by train order, may be made,
-    subject to prescribed signals and rules, or special instructions. <<rot>>
+    subject to prescribed signals and rules, or special instructions. <<bibliography.adoc#rot,1>>
 {nbsp} +
 {nbsp} +
     A system of tracks within defined limits provided for the making up of trains,
     storing of cars and other purposes, over which movements not authorized by timetable, or by train order, may be made, subject
-    to prescribed signals and rules, or special instructions. <<oprb>>
+    to prescribed signals and rules, or special instructions. <<bibliography.adoc#oprb,2>>
 
 YARD ENGINE::
-    An engine assigned to yard service. <<rot>>
+    An engine assigned to yard service. <<bibliography.adoc#rot,1>>
 {nbsp} +
 {nbsp} +
-    An engine assigned to yard service and working within yard limits. <<oprb>>
+    An engine assigned to yard service and working within yard limits. <<bibliography.adoc#oprb,2>>
