--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -1,5 +1,6 @@
 = Railroad Train Order and Time-table Operations
+:toc:
 
-include::glossary.adoc[]
+link:glossary{outfilesuffix}[Glossary]
 
-include::bibliography.adoc[]
+link:bibliography{outfilesuffix}[Bibliography]
