--- a/src/main/asciidoc/_master.adoc
+++ b/src/main/asciidoc/_master.adoc
@@ -1,5 +1,9 @@
 = Railroad Train Order and Time-table Operations
-:toc:
+:toc: macro
+
+include::colophon.adoc[]
+
+toc::[]
 
 include::glossary.adoc[]
 
