--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -1,5 +1,9 @@
 = Railroad Train Order and Time-table Operations
-:toc:
+:toc: macro
+
+link:colophon{outfilesuffix}[Colophon]
+
+toc::[]
 
 link:glossary{outfilesuffix}[Glossary]
 
