--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -1,10 +1,9 @@
 = Railroad Train Order and Time-table Operations
-:toc: macro
 
-link:colophon{outfilesuffix}[Colophon]
+include::colophon.adoc[]
 
-toc::[]
+include::preface.adoc[]
 
-link:glossary{outfilesuffix}[Glossary]
+include::glossary.adoc[]
 
-link:bibliography{outfilesuffix}[Bibliography]
+include::bibliography.adoc[]
