Task #16 - Describe communication between dispatcher and stations * added new file for describing the communications protocols * updated caption for the org chart * added new standalone PlantUML diagrams for inclusion in the docs

--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -1,10 +1,13 @@
 = Railroad Train Order and Time-table Operations
+:listing-caption: Figure
 
 include::colophon.adoc[]
 
 include::preface.adoc[]
 
 include::organization.adoc[]
+
+include::communication.adoc[]
 
 include::glossary.adoc[]
 
